// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`displays warning for deprecated config options 1`] = `
<bold><bold>●<bold> Deprecation Warning:

  Option <bold>scriptPreprocessor was replaced by <bold>transform, which support multiple preprocessors.

  Jest now treats your current configuration as:
  {
    <bold>"transform": <bold>{".*": "test"}
  }

  Please update your configuration.
</>
`;

exports[`displays warning for unknown config options 1`] = `
<bold><bold>●<bold> Validation Warning:

  Unknown option <bold>"unkwon" with value <bold>{} was found. Did you mean <bold>"unknown"?
  This is probably a typing mistake. Fixing it will remove this message.
</>
`;

exports[`pretty prints valid config for Array 1`] = `
<red><bold><bold>●<bold> Validation Error:

  Option <bold>"coverageReporters" must be of type:
    <bold><green>array<red>
  but instead received:
    <bold><red>object<red>

  Example:
  {
    <bold>"coverageReporters": <bold>["json", "text", "lcov", "clover"]
  }
</>
`;

exports[`pretty prints valid config for Boolean 1`] = `
<red><bold><bold>●<bold> Validation Error:

  Option <bold>"automock" must be of type:
    <bold><green>boolean<red>
  but instead received:
    <bold><red>array<red>

  Example:
  {
    <bold>"automock": <bold>false
  }
</>
`;

exports[`pretty prints valid config for Function 1`] = `
<red><bold><bold>●<bold> Validation Error:

  Option <bold>"fn" must be of type:
    <bold><green>function<red>
  but instead received:
    <bold><red>string<red>

  Example:
  {
    <bold>"fn": <bold>(config, option, deprecatedOptions) => true
  }
</>
`;

exports[`pretty prints valid config for Object 1`] = `
<red><bold><bold>●<bold> Validation Error:

  Option <bold>"haste" must be of type:
    <bold><green>object<red>
  but instead received:
    <bold><red>number<red>

  Example:
  {
    <bold>"haste": <bold>{"providesModuleNodeModules": ["react", "react-native"]}
  }
</>
`;

exports[`pretty prints valid config for String 1`] = `
<red><bold><bold>●<bold> Validation Error:

  Option <bold>"preset" must be of type:
    <bold><green>string<red>
  but instead received:
    <bold><red>number<red>

  Example:
  {
    <bold>"preset": <bold>"react-native"
  }
</>
`;

exports[`works with custom deprecations 1`] = `
<bold>My Custom Deprecation Warning:

  Option <bold>scriptPreprocessor was replaced by <bold>transform, which support multiple preprocessors.

  Jest now treats your current configuration as:
  {
    <bold>"transform": <bold>{".*": "test"}
  }

  Please update your configuration.

My custom comment</>
`;

exports[`works with custom errors 1`] = `
<red><bold>My Custom Error:

  Option <bold>"test" must be of type:
    <bold><green>array<red>
  but instead received:
    <bold><red>string<red>

  Example:
  {
    <bold>"test": <bold>[1, 2]
  }

My custom comment</>
`;

exports[`works with custom warnings 1`] = `
<bold>My Custom Warning:

  Unknown option <bold>"unknown" with value <bold>"string" was found.
  This is probably a typing mistake. Fixing it will remove this message.

My custom comment</>
`;
